package io.github.light0x00.lighty.core.handler;

/**
 * @author light0x00
 * @since 2023/7/10
 */
public interface DuplexChannelHandler extends InboundChannelHandler, OutboundChannelHandler {
}
